--- a/style.css
+++ b/style.css
@@ -9,3 +9,10 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+#confirm {
+  display: block;
+  margin-top: 2.5em;
+  margin-left: auto;
+  margin-right: auto;
+}
